[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cfg"
authors = [{name = "Lai-YT", email = "381xvmvbib@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.scripts]
blocks = "cfg:blocks"
cfg = "cfg:cfg"
graph-cfg = "cfg:graph_cfg"
